Create font families.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Roboto;
+    src: url(assets/fonts/roboto.ttf);
+}
+
+@font-face {
+    font-family: Main;
+    src:url(assets/fonts/main.ttf);
+}
