Add classes to the <h(n)> tags

--- a/src/app/components/static/id/id.component.html
+++ b/src/app/components/static/id/id.component.html
@@ -1,4 +1,4 @@
 <div class="idheader">
-    <h1>Spotify App</h1>
-    <h2>Péter Verebes</h2>
+    <h1 class="idh idh1">Spotify App</h1>
+    <h2 class="idh idh2">Péter Verebes</h2>
 </div>
