Change the fontsize of the header

--- a/src/app/components/static/id/id.component.scss
+++ b/src/app/components/static/id/id.component.scss
@@ -1,3 +1,15 @@
 .idheader{
     font-family: Main;
 }
+
+.idh{
+    padding: 0px;
+    margin: 0px;
+}
+
+.idh1{
+    font-size :xx-large;
+}
+.idh2{
+    font-size: large;
+}
