Create the raw skeleton of the html

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<div class="container">
+
+    <div class="left_side">
+        <div class="right_aligned">
+            We Love your taste
+        </div>
+        <div class="left_aligned">
+            Track your spotify stats,get to know your taste.Lorem ipsum
+        </div>
+    </div>
+
+    <div class="right_side">
+        <img src="assets/images/featured.png">
+    </div>
+
+
+    <div class="icon-btn">
+        <button>Connect with Spotify</button>
+    </div>
+
+</div>
