Create blur background behind featured image

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,8 @@
     </div>
 
     <div class="right_side">
-        <img src="assets/images/featured.png">
+        <img class="background" src="assets/images/featured.png">
+        <img class="foreground" src="assets/images/featured.png">
     </div>
 
 
