--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -15,6 +15,21 @@ div.container{
         width: 50%;
         height: 100%;
         left: 50%;
+
+        img.foreground {
+            position: relative;
+            width: 60%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+
+        img.background {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            filter: blur(9px);
+        }
     }
 
 }
