Create inner shadow text

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 
     <div class="left_side">
         <div class="right_aligned">
-            We Love your taste
+            We Love<br>your<br>taste
         </div>
         <div class="left_aligned">
-            Track your spotify stats,get to know your taste.Lorem ipsum
+            Track your<br>Spotify stats,get to<br>know your taste.<br>Lorem ipsum
         </div>
     </div>
 
