Create label to featured image

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,11 @@
 
     <div class="right_side">
         <img class="background" src="assets/images/featured.png">
-        <img class="foreground" src="assets/images/featured.png">
+
+        <section>
+            <img class="foreground" src="assets/images/featured.png">
+            <span class="featured-txt">Featured: Casey Veggies</span>
+        </section>
     </div>
 
 
