Move button to bottom left corner

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -82,4 +82,11 @@ div.container{
         }
     }
 
+    div.icon-btn{
+        position: absolute;
+        margin: 15px;
+        bottom: 0px;
+        left: 0px;
+    }
+
 }
