Create button with spotify icon

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,8 @@
 
 
     <div class="icon-btn">
-        <button>Connect with Spotify</button>
+        <img class="icon" src="assets/images/SpotifyIcon.svg">
+        <button href="#">Connect with Spotify</button>
     </div>
 
 </div>
