Button moved to top right corner

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -86,8 +86,8 @@ div.container{
         position: absolute;
         height: max-content;
         margin: 15px;
-        bottom: 0px;
-        left: 0px;
+        top: 0px;
+        right: 50%;
         display: flex;
 
         img.icon{
