Create onclick method to button

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
     </div>
 
 
-    <div class="icon-btn">
+    <div (click)="onConnect()" class="icon-btn">
         <img class="icon" src="assets/images/SpotifyIcon.svg">
         <button href="#">Connect with Spotify</button>
     </div>
