--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -89,6 +89,7 @@ div.container{
         top: 0px;
         right: 50%;
         display: flex;
+        
 
         img.icon{
             background-color: #1ED760;
@@ -96,6 +97,7 @@ div.container{
             border-top-left-radius: 10px;
             border-bottom-left-radius: 10px;
             padding: 5px;
+            cursor: pointer;   
         }
 
         button{
@@ -108,6 +110,7 @@ div.container{
             font-size: 1.5rem;
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
+            cursor: pointer;
         }
     }
 
