--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,6 +8,7 @@ div.container{
         position: absolute;
         width: 50%;
         height: 100%;
+        background-color: #F1F1E6;
 
         div.right_aligned{
             position: absolute;
