--- a/src/app/components/static/id/id.component.scss
+++ b/src/app/components/static/id/id.component.scss
@@ -1,6 +1,8 @@
 .idheader{
     font-family: Main;
     position: absolute;
+    top: 0%;
+    left: 0%;
     margin: 15px;
 }
 
@@ -15,5 +17,5 @@
 }
 .idh2{
     font-size: large;
-    color: #D1D1D1;
+    color: #c7c7c7;
 }
