Mobile repsonsive view for home component.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         <div class="left_aligned">
             Track your<br>Spotify stats,get to<br>know your taste.<br>Lorem ipsum
         </div>
-        <img class="waves" src="assets/images/wave_light.svg">
+        <!--img class="waves" src="assets/images/wave_light.svg"-->
     </div>
 
     <div class="right_side">
