--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,12 +1,14 @@
+
 div.container{
     position: relative;
     width: 100vw;
     height: 100vh;
     display: flex;
+    overflow: hidden;
 
     div.left_side{
         position: absolute;
-        width: 50%;
+        width: 100%;
         height: 100%;
         background-color: #F1F1E6;
 
@@ -14,7 +16,7 @@ div.container{
             position: absolute;
             font-family: Main;
             text-align: end;
-            font-size: 4rem;
+            font-size: 10vw;
             top: 50%;
             right: 50%;
             margin: 10px;
@@ -29,7 +31,6 @@ div.container{
             position: absolute;
             font-family: Roboto;
             text-align: left;
-            font-size: 1.5rem;
             top: 50%;
             margin: 10px;
             margin-left: 50px;
@@ -49,46 +50,7 @@ div.container{
     }
 
     div.right_side{
-        position: absolute;
-        width: 50%;
-        height: 100%;
-        left: 50%;
-
-
-
-        img.background {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            filter: blur(9px);
-        }
-
-
-        section{
-            position: relative;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-
-            img.foreground {
-                position: relative;
-                width: 60%;
-                left: 50%;
-                top: 50%;
-                transform: translateX(-50%);
-            }
-
-            span.featured-txt{
-                position: absolute;
-                right: 20%;
-                top: 102%;
-                width: fit-content;
-                font-size: x-large;
-                text-align: end;
-                color: white;
-                font-family: Main;
-            }
-        }
+        visibility: hidden;
     }
 
     div.icon-btn{
@@ -96,7 +58,7 @@ div.container{
         height: max-content;
         margin: 15px;
         top: 0px;
-        right: 50%;
+        right: 0%;
         display: flex;
         
 
@@ -116,11 +78,145 @@ div.container{
             font-family: Main;
             color: white;
             padding: 5px;
-            font-size: 1.5rem;
+            font-size: 4vw;
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
             cursor: pointer;
         }
     }
+}
 
+
+@media only screen and (min-width: 600px) {
+    // Tablet
+}
+  
+@media only screen and (min-width: 768px) {
+    // Desktop
+    div.container{
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+    
+        div.left_side{
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            background-color: #F1F1E6;
+    
+            div.right_aligned{
+                position: absolute;
+                font-family: Main;
+                text-align: end;
+                font-size: 4rem;
+                top: 50%;
+                right: 50%;
+                margin: 10px;
+                background-color: #3CD2B7;
+                background-clip: text;
+                text-shadow: 0px 4px 4px rgba(255,255,255,.5);
+                color: transparent;
+                transform: translate(-50%,-50%);
+            }
+    
+            div.left_aligned{
+                position: absolute;
+                font-family: Roboto;
+                text-align: left;
+                font-size: 1.5rem;
+                top: 50%;
+                margin: 10px;
+                margin-left: 50px;
+                color: #727272;
+                left: 50%;
+                transform: translate(-50%,-50%);     
+            }
+    
+            img.waves{
+                position: relative;
+                width: 100%;
+                bottom: 0;
+                top: 100%;
+                transform: translateY(-100%);
+            }
+    
+        }
+    
+        div.right_side{
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            left: 50%;
+            visibility: visible;
+    
+    
+    
+            img.background {
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                filter: blur(9px);
+            }
+    
+    
+            section{
+                position: relative;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%,-50%);
+    
+                img.foreground {
+                    position: relative;
+                    width: 60%;
+                    left: 50%;
+                    top: 50%;
+                    transform: translateX(-50%);
+                }
+    
+                span.featured-txt{
+                    position: absolute;
+                    right: 20%;
+                    top: 102%;
+                    width: fit-content;
+                    font-size: x-large;
+                    text-align: end;
+                    color: white;
+                    font-family: Main;
+                }
+            }
+        }
+    
+        div.icon-btn{
+            position: absolute;
+            height: max-content;
+            margin: 15px;
+            top: 0px;
+            right: 50%;
+            display: flex;
+            
+    
+            img.icon{
+                background-color: #1ED760;
+                max-height: 100%;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
+                padding: 5px;
+                cursor: pointer;   
+            }
+    
+            button{
+                background-color: #1ED760;
+                outline: none;
+                border: none;
+                font-family: Main;
+                color: white;
+                padding: 5px;
+                font-size: 1.5rem;
+                border-top-right-radius: 10px;
+                border-bottom-right-radius: 10px;
+                cursor: pointer;
+            }
+        }
+    }
 }
