Link button press to Spotify auth.

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -109,7 +109,7 @@ div.container{
                 position: absolute;
                 font-family: Main;
                 text-align: end;
-                font-size: 4rem;
+                font-size: 4vw;
                 top: 50%;
                 right: 50%;
                 margin: 10px;
@@ -124,7 +124,7 @@ div.container{
                 position: absolute;
                 font-family: Roboto;
                 text-align: left;
-                font-size: 1.5rem;
+                font-size: 1.5vw;
                 top: 50%;
                 margin: 10px;
                 margin-left: 50px;
