Displaying if the datas are loaded.

--- a/src/app/components/stats/stats.component.html
+++ b/src/app/components/stats/stats.component.html
@@ -1,1 +1,7 @@
-<p>stats works!</p>
+<div class="container" *ngIf="isLoaded">
+    Loaded
+</div>
+
+<div class="loading" *ngIf="!isLoaded">
+    Not loaded
+</div>
