Remove stats component.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="userToken == null" class="container">
 
     <div class="left_side">
         <div class="right_aligned">
@@ -20,14 +20,9 @@
     </div>
 
 
-    <div *ngIf="userToken == null" (click)="onConnect()" class="icon-btn">
+    <div (click)="onConnect()" class="icon-btn">
         <img class="icon" src="assets/images/SpotifyIcon.svg">
         <button href="#">Connect with Spotify</button>
-    </div>
-
-    <div *ngIf="userToken != null" (click)="onSignOut()" class="icon-btn">
-        <img class="icon" src="assets/images/SpotifyIcon.svg">
-        <button href="#">Sign out Spotify</button>
     </div>
 
 </div>
