Add mainText component frontend desing.

--- a/src/app/components/mini/main-text/main-text.component.html
+++ b/src/app/components/mini/main-text/main-text.component.html
@@ -1,1 +1,8 @@
-<p>main-text works!</p>
+<div class="container">
+    <div class="left-side green-text">
+        There's a Lot to process
+    </div>
+    <div class="right-side">
+        As
+    </div>
+</div>
