--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,14 @@
 <div *ngIf="userToken == null" class="container">
 
     <div class="left_side">
-        <div class="right_aligned">
+        <!--<div class="right_aligned">
             We Love<br>your<br>taste
         </div>
         <div class="left_aligned">
             Track your<br>Spotify stats,get to<br>know your taste.<br>Lorem ipsum
-        </div>
+        </div> -->
         <!--img class="waves" src="assets/images/wave_light.svg"-->
+        <app-main-text class="maintext"></app-main-text>
     </div>
 
     <div class="right_side">
