--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -8,8 +8,6 @@ div.container{
 
     div.left_side{
         position: absolute;
-        width: 100%;
-        height: 100%;
         background-color: #F1F1E6;
 
         div.right_aligned{
@@ -101,46 +99,8 @@ div.container{
     
         div.left_side{
             position: absolute;
-            width: 50%;
-            height: 100%;
-            background-color: #F1F1E6;
-    
-            div.right_aligned{
-                position: absolute;
-                font-family: Main;
-                text-align: end;
-                font-size: 4vw;
-                top: 50%;
-                right: 50%;
-                margin: 10px;
-                background-color: #3CD2B7;
-                background-clip: text;
-                text-shadow: 0px 4px 4px rgba(255,255,255,.5);
-                color: transparent;
-                transform: translate(-50%,-50%);
-            }
-    
-            div.left_aligned{
-                position: absolute;
-                font-family: Roboto;
-                text-align: left;
-                font-size: 1.5vw;
-                top: 50%;
-                margin: 10px;
-                margin-left: 50px;
-                color: #727272;
-                left: 50%;
-                transform: translate(-50%,-50%);     
-            }
-    
-            img.waves{
-                position: relative;
-                width: 100%;
-                bottom: 0;
-                top: 100%;
-                transform: translateY(-100%);
-            }
-    
+            width: 50vw;
+            height: 100vh;
         }
     
         div.right_side{
