--- a/src/app/components/mini/main-text/main-text.component.html
+++ b/src/app/components/mini/main-text/main-text.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="left-side green-text">
-        There's a Lot to process
+        {{leftText}}
     </div>
     <div class="right-side">
-        As
+        {{rightText}} 
     </div>
 </div>
