Localstorage use only in necessary codesnippets.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="service.token == null" class="container">
+<div *ngIf="getToken() == null" class="container">
 
     <div class="left_side">
         <app-main-text 
