--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
 <div *ngIf="getToken() == null" class="container">
-
     <div class="left_side">
         <app-main-text 
         leftText="We love your taste of music."
@@ -21,5 +20,28 @@
         <img class="icon" src="assets/images/SpotifyIcon.svg">
         <button href="#">Connect with Spotify</button>
     </div>
+</div>
 
+<div *ngIf="getToken() != null" class="container">
+    <div class="left_side">
+        <app-main-text 
+        leftText="We love your taste of music."
+        rightText="Get your Spotify stats, and be proud of your numbers!"
+        class="maintext"></app-main-text>
+    </div>
+
+    <div class="right_side">
+        <img class="background" src="assets/images/featured.png">
+
+        <section>
+            <img class="foreground" src="assets/images/featured.png">
+            <span class="featured-txt">Featured: Casey Veggies</span>
+        </section>
+    </div>
+
+
+    <div (click)="onSignOut()" class="icon-btn">
+        <img class="icon" src="assets/images/SpotifyIcon.svg">
+        <button href="#">Disconnect from Spotify</button>
+    </div>  
 </div>
