--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,6 +10,7 @@ div.container{
     div.left_side{
         position: absolute;
         background-color: #F1F1E6;
+        width: 100vw;
 
         div.right_aligned{
             position: absolute;
