--- a/src/app/components/mini/main-text/main-text.component.scss
+++ b/src/app/components/mini/main-text/main-text.component.scss
@@ -1,7 +1,7 @@
 div.container{
-    position: relative;
-    width: 50vw;
-    height: 100vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
     div.left-side{
         position: absolute;
