Remove token from local storage after signing out.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="left_side">
         <app-main-text 
         leftText="We love your taste of music."
-        rightText="Get your Spotify stats, and be proud of your numbers!"
+        rightText="Log in to get your Spotify stats, and be proud of your numbers!"
         class="maintext"></app-main-text>
 
         <div (click)="onConnect()" class="icon-btn">
@@ -38,6 +38,7 @@
             <img class="icon" src="assets/images/SpotifyIcon.svg">
             <button href="#">Disconnect from Spotify</button>
         </div>  
+
     </div>
 
 </div>
