--- a/src/app/components/mini/main-text/main-text.component.scss
+++ b/src/app/components/mini/main-text/main-text.component.scss
@@ -34,6 +34,8 @@ div.container{
         overflow-wrap: break-word;
         transform: translateY(-50%);
         margin-left: 15px;
+        color: #adadad;
+        font-weight: bold;
     }
 
 }
