--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -7,7 +7,6 @@ div.container{
     display: flex;
     overflow: hidden;
 
-
     div.left_side{
         position: absolute;
         
@@ -46,7 +45,10 @@ div.container{
             bottom: 0;
             top: 100%;
             transform: translateY(-100%);
+            display: flexbox;
         }
+
+
 
     }
 
@@ -91,6 +93,14 @@ div.container{
     }
 }
 
+
+div.loadingcontainer{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 @media only screen and (min-width: 600px) {
     // Tablet
