Create placeholder for title section with style.

--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -2,4 +2,8 @@
 
     <a class="see_all">See all >></a>
 
+    <div class="top_container">
+        <section class="title green-text">Your most listened track in the past 4 weeks</section>
+    </div>
+
 </div>
