--- a/src/app/components/stat-display/stat-display.component.scss
+++ b/src/app/components/stat-display/stat-display.component.scss
@@ -12,4 +12,27 @@ div.page{
         transform: translate(-100%,-100%);
         color: blue;
     }
+
+    div.top_container{
+        position: absolute;
+        width: 30vw;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    
+        section.title{
+            overflow-wrap: break-word;
+            font-family: Main;
+            font-size: 3vw;
+            text-align: center;
+        }
+
+        .green-text{
+            background-color: #3CD2B7;
+            background-clip: text;
+            text-shadow: 0px 4px 4px rgba(255,255,255,.5);
+            color: transparent;
+        }
+
+    }
 }
