Add placeholder image with style to top track component.

--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -4,6 +4,7 @@
 
     <div class="top_container">
         <section class="title green-text">Your most listened track in the past 4 weeks</section>
+        <img src="assets/images/featured.png" class="top-img"/>
     </div>
 
 </div>
