--- a/src/app/components/stat-display/stat-display.component.scss
+++ b/src/app/components/stat-display/stat-display.component.scss
@@ -1,3 +1,10 @@
+.green-text{
+    background-color: #3CD2B7;
+    background-clip: text;
+    text-shadow: 0px 4px 4px rgba(255,255,255,.5);
+    color: transparent;
+}
+
 div.page{
     width: 100vw;
     height: 100vh;
@@ -21,18 +28,21 @@ div.page{
         transform: translate(-50%,-50%);
     
         section.title{
+            top: 50%;
+            position: absolute;
             overflow-wrap: break-word;
             font-family: Main;
             font-size: 3vw;
             text-align: center;
+            transform: translateY(-30vh)
         }
 
-        .green-text{
-            background-color: #3CD2B7;
-            background-clip: text;
-            text-shadow: 0px 4px 4px rgba(255,255,255,.5);
-            color: transparent;
+        img.top-img{
+            position: absolute;
+            left: 50%;
+            height: 30vh;
+            top: 50%;
+            transform: translate(-50%,-50%);
         }
-
     }
 }
