Desktop view for top track with placeholders add.

--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -5,6 +5,9 @@
     <div class="top_container">
         <section class="title green-text">Your most listened track in the past 4 weeks</section>
         <img src="assets/images/featured.png" class="top-img"/>
+        <section class="track-name"><b>"Organic"</b></section>
+        <section class="album-name">on <b>XY album name blabla</b></section>
+        <section class="by-artist">By <b>Casey Veggies</b></section>
     </div>
 
 </div>
