background images with placeholders added to top tracks component.

--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -3,11 +3,18 @@
     <a class="see_all">See all >></a>
 
     <div class="top_container">
+        <!-- 1st most listened -->
         <section class="title green-text">Your most listened track in the past 4 weeks</section>
         <img src="assets/images/featured.png" class="top-img"/>
         <section class="track-name"><b>"Organic"</b></section>
         <section class="album-name">on <b>XY album name blabla</b></section>
         <section class="by-artist">By <b>Casey Veggies</b></section>
     </div>
+
+    <!-- 2nd most listened to 5th most listened -->
+    <img class="second" src="assets/images/featured.png"/>
+    <img class="third" src="assets/images/featured.png"/>
+    <img class="fourth" src="assets/images/featured.png"/>
+    <img class="fifth" src="assets/images/featured.png"/>
 
 </div>
