--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,9 +19,6 @@
             <span class="featured-txt">Featured: Casey Veggies</span>
         </section>
     </div>
-
-
-
 </div>
 
 <div *ngIf="getToken() != null" class="container">
@@ -39,7 +36,15 @@
         </app-main-text>
         <app-infinite-load-bar></app-infinite-load-bar>    
     </div>
-    <div *ngIf="isLoaded == true">
-        <top-tracks-display></top-tracks-display>
+    <div class="statcontainer" *ngIf="isLoaded == true">
+        <top-tracks-display
+        title="in the past 4 week"
+        [tracks]="shortTermTopTracks"></top-tracks-display><br>
+        <top-tracks-display
+        title="in the past 3 months"
+        [tracks]="medTermTopTracks"></top-tracks-display><br>
+        <top-tracks-display
+        title="of all time"
+        [tracks]="longTermTopTracks"></top-tracks-display><br>
     </div>
 </div>
