Create arrow style.

--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -17,4 +17,8 @@
     <img class="fourth" [src]="tracks.items[3].album.images[0].url"/>
     <img class="fifth" [src]="tracks.items[4].album.images[0].url"/>
 
+    <div class="arrow">
+        <img class="arrow" src="assets/images/Arrow.svg"/>
+        <section class="green-text">Next</section>
+    </div>
 </div>
