--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -106,7 +106,7 @@ div.loadingcontainer{
 @media only screen and (min-width: 768px) {
     // Desktop
     div.container{
-        width: 100vw;
+        width: 100%;
 
     
         div.statcontainer{
