--- a/src/app/components/stat-display/stat-display.component.scss
+++ b/src/app/components/stat-display/stat-display.component.scss
@@ -7,8 +7,26 @@
 
 div.page{
     position: relative;
-    width: 100vw;
+    left: 0%;
+    width: 100%;
     height: 100vh;
+
+    div.arrow{
+        cursor: pointer;
+        display: flex;
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        transform: translate(-50%,-110%);
+        font-family: Main;
+        font-size: 3vh;
+    }
+
+    img.arrow{
+        position: absolute;
+        height: 100%;
+        transform: translateX(-100%);
+    }
 
     a.see_all{
         position: absolute;
