--- a/src/app/components/stat-display/stat-display.component.html
+++ b/src/app/components/stat-display/stat-display.component.html
@@ -19,6 +19,6 @@
 
     <div class="arrow">
         <img class="arrow" src="assets/images/Arrow.svg"/>
-        <section class="green-text">Next</section>
+        <a class="green-text">Next</a>
     </div>
 </div>
