Get artists from API to html.

--- a/src/app/components/artists-display/artists-display.component.html
+++ b/src/app/components/artists-display/artists-display.component.html
@@ -1,1 +1,3 @@
-<p>artists-display works!</p>
+<div class="container">
+    <section class="title">Your most listened artist {{ title }}</section>
+</div>
