--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,6 +37,10 @@
         <app-infinite-load-bar></app-infinite-load-bar>    
     </div>
     <div class="statcontainer" *ngIf="isLoaded == true">
+        <app-artists-display
+        title="in the past 4 week"
+        [artists]="shortTermTopArtists">
+        </app-artists-display><br>
         <top-tracks-display
         title="in the past 4 week"
         [tracks]="shortTermTopTracks"></top-tracks-display><br>
