Add placeholder images.

--- a/src/app/components/artists-display/artists-display.component.html
+++ b/src/app/components/artists-display/artists-display.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-    <section class="title">Your most listened artist {{ title }}</section>
+    <section class="title green-text">Your most listened artist {{ title }}</section>
+    <img class="profile_img_bg" src="assets/images/featured.png">
+    <img class="profile_img_fg" src="assets/images/featured.png">
 </div>
