--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,10 @@ body{
     margin: auto;
     height: 100%;
 }
+
+.green-text{
+    background-color: #3CD2B7;
+    background-clip: text;
+    text-shadow: 0px 4px 4px rgba(255,255,255,.5);
+    color: transparent;
+}
