Add top artist page without see all button.

--- a/src/app/components/artists-display/artists-display.component.html
+++ b/src/app/components/artists-display/artists-display.component.html
@@ -1,5 +1,15 @@
 <div class="container">
-    <section class="title green-text">Your most listened artist {{ title }}</section>
-    <img class="profile_img_bg" src="assets/images/featured.png">
-    <img class="profile_img_fg" src="assets/images/featured.png">
+    <img class="profile_img_bg" [src]="artists.items[0].images[0].url">
+    <img class="profile_img_fg" [src]="artists.items[0].images[0].url">
+    <div class="infos">
+        <section class="title green-text">Your most listened artist {{ title }}</section><br>
+        <section class="artist_name">{{ artists.items[0].name }}</section><br>
+        <section class="followers">with <span class="green-text">{{artists.items[0].followers.total}}</span> total followers</section><br>
+        <p class="followers">in the following genres:</p><br>
+        <div>
+            <ul class="list">
+                <li class="genres" *ngFor="let item of artists.items[0].genres">{{item}}</li>
+            </ul>
+        </div>
+    </div>
 </div>
