--- a/src/app/components/artists-display/artists-display.component.html
+++ b/src/app/components/artists-display/artists-display.component.html
@@ -5,7 +5,7 @@
         <section class="title green-text">Your most listened artist {{ title }}</section><br>
         <section class="artist_name">{{ artists.items[0].name }}</section><br>
         <section class="followers">with <span class="green-text">{{artists.items[0].followers.total}}</span> total followers</section><br>
-        <p class="followers">in the following genres:</p><br>
+        <p class="followers" *ngIf="artists.items[0].genres.length">in the following genres:</p><br>
         <div>
             <ul class="list">
                 <li class="genres" *ngFor="let item of artists.items[0].genres">{{item}}</li>
