--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -39,7 +39,13 @@
     <div class="statcontainer" *ngIf="isLoaded == true">
         <app-artists-display
         title="in the past 4 week"
-        [artists]="shortTermTopArtists">
+        [artists]="shortTermTopArtists"></app-artists-display><br>
+        <app-artists-display
+        title="in the past 3 months"
+        [artists]="medTermTopArtists"></app-artists-display><br>
+        <app-artists-display
+        title="of all time"
+        [artists]="longTermTopArtists"><br>
         </app-artists-display><br>
         <top-tracks-display
         title="in the past 4 week"
